@@ -68,6 +68,10 @@ noplugin_LIBS += $(LIBCURL_LIBS)
 
 endif
 
+ifeq "gcs-@gcs@" "gcs-enabled"
+plugin_OBJS += hfile_gcs.o
+endif
+
 ifeq "plugins-@enable_plugins@" "plugins-yes"
 
 plugindir  = @plugindir@
@@ -79,6 +83,7 @@ PLUGIN_OBJS += $(plugin_OBJS)
 plugin.o plugin.pico: CPPFLAGS += -DPLUGINPATH=\"$(pluginpath)\"
 
 # When built as separate plugins, these record their version themselves.
+hfile_gcs.o hfile_gcs.pico: version.h
 hfile_libcurl.o hfile_libcurl.pico: version.h
 
 # Windows DLL plugins depend on the import library, built as a byproduct.
