@@ -808,6 +808,9 @@ static void load_hfile_plugins()
 #ifdef HAVE_LIBCURL
     init_add_plugin(NULL, hfile_plugin_init_libcurl, "libcurl");
 #endif
+#ifdef ENABLE_GCS
+    init_add_plugin(NULL, hfile_plugin_init_gcs, "gcs");
+#endif
 
 #endif
 
